backend/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vscode-test
  labels:
    sidecar.istio.io/inject: "false"
    networkpolicy.k8s.io/to-all: allow
    app.kubernetes.io/name: vscode-test
    app.kubernetes.io/component: remote-development
spec:
  containers:
  - name: vscode
    image: codercom/code-server
    command: ["/bin/bash"]
    args: ["-c", "/mnt/scripts/startup.sh"]
    volumeMounts:
      - name: config-volume
        mountPath: /mnt/scripts/
        readOnly: true
  securityContext:
    runAsUser: 1000
  volumes:
    - name: config-volume
      configMap:
        name: script-configmap
        defaultMode: 0755
